tweak css - hero images no longer white text on white background until loaded, credits have better contrast

--- a/css/custom.scss
+++ b/css/custom.scss
@@ -13,7 +13,7 @@
 
 .hero {
   background-clip: border-box;
-  background-color: rgba(0, 0, 0, 0);
+  background-color: #333;
   background-origin: padding-box;
   background-position: center center;
   background-repeat: no-repeat;
@@ -66,6 +66,7 @@
   .credit {
     text-align: right;
     font-size: 0.6em;
+    text-shadow: 1px 1px 1px rgba(0,0,0,0.3);
   }
 }
 
